feat: complete management deletion and asset experiences
